--- a/computationalCategories/.vscode/settings.json
+++ b/computationalCategories/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "composability",
+        "composables",
+        "Functors",
         "morphism",
         "morphisms",
         "verts"
